--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,3 +1,6 @@
+title = "GridPack"
+gitSourceBranch = "main"
+
 [[classOrder]]
 section = "ItemManagers"
 classes = ["ItemManager", "Grid", "SingleSlot"]
