Fix config misspell

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -9,6 +9,6 @@ classes = ["ItemManager", "Grid", "SingleSlot"]
 enabled = true
 includeReadme = false
 
-[docasaurus]
+[docusaurus]
 url = "https://grid-pack.ifrex.xyz"
 baseUrl = "/"
